# data-driven-dynamics

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  setup.bash  simple_quadrotor_model_2021-04-17-19-33-32.yaml
.github/workflows/: build_test.yml  build_test.yml.ignore  check_style.yml  sysid_test.yml
Tools/: __init__.py  sitl_run.sh  visualize_rotorfeatures.py
Tools/log_processing/: main.py  ulog_utils.py
Tools/parametric_model/: __init__.py  generate_data.py  generate_parametric_model.py  main.py  model_params.yml  model_results.yml  plot_data.py  predict_model.py  quat_test.py  requirements.txt  rotor_model_params.yml  test_parametric_model.sh
Tools/parametric_model/active_dataframe_selector/: data_selector.py
Tools/parametric_model/configs/: config_template.yaml  delta_quadplane_model.yaml  dynamics_model_test_config.yaml  fixedwing_longitudinal_model.yaml  fixedwing_model.yaml  fixedwing_singularityfree_model.yaml  fixedwing_vanes.yaml  quadplane_model.yaml  quadrotor_model.yaml  standardplane_model.yaml  tailsitter_model.yaml  tilt_wing.yaml  tiltwing_model.yaml  vtol_longitudinal_model.yaml  vtol_tiltrotor_longitudinal_model.yaml  vtol_tiltrotor_model.yaml
Tools/parametric_model/src/: __init__.py
Tools/parametric_model/src/models/: __init__.py  __init__.py.orig  delta_quad_plane_model.py  delta_quadplane_model.py  dynamics_model.py  dynamics_model.py.orig  fixedwing_model.py  global_singularityfree_model.py  model_config.py  multirotor_model.py  quad_plane_model.py  quadplane_model.py  quadrotor_model.py  simple_fixedwing_model.py  simple_multirotor.py  simple_quadrotor_model.py  simple_rotor_model.py  standardplane_model.py  tilt_wing_model.py  tiltwing_model.py
Tools/parametric_model/src/models/aerodynamic_models/: __init__.py  aero_model_AAE.py  aero_model_Delta.py  control_surface_model.py  elevator_model.py  fuselage_drag_model.py  linear_plate_aero_model.py  linear_wing_model.py  phiaerodynamics_model.py  simple_drag_model.py  standard_wing_model.py  tilt_wing_section_aero_model.py
Tools/parametric_model/src/models/aerodynamics/: __init__.py  aerodynamic_utils.py  linear_plate_aero_model.py
Tools/parametric_model/src/models/extractor_models/: __init__.py  fixedwing_extractor_model.py  singularityfree_extractor_model.py
Tools/parametric_model/src/models/model_config/: config_template.yaml  dynamics_model_test_config.yaml  qpm_delta_vtol_config.yaml  qpm_gazebo_standard_vtol_config.yaml  qpm_gazebo_standart_vtol_config.yaml  sqrm_gazebo_standart_config.yaml  tilt_wing_config.yaml  tilt_wing_section_test_config.yaml
Tools/parametric_model/src/models/model_plots/: __init__.py  aerodynamics_plots.py  linear_model_plots.py  model_plots.py  quad_plane_model_plots.py  rotor_plots.py  tilt_wing_plots.py
Tools/parametric_model/src/models/quad_plane_model/: __init__.py  quad_plane_model.py
Tools/parametric_model/src/models/quad_plane_model/test_results/: quad_plane_model_2021-04-13-15-12-44.yaml
Tools/parametric_model/src/models/rotor_models/: __init__.py  bi_directional_rotor_model.py  changing_axis_rotor_model.py  gazebo_rotor_model.py  linear_rotor_model.py  rotor_model.py  simple_rotor_model.py  tilting_rotor_model.py
Tools/parametric_model/src/models/simple_quadrotor_model/: __init__.py  simple_quadrotor_model.py
Tools/parametric_model/src/models/simple_quadrotor_model/test_results/: simple_quadrotor_model_2021-04-13-15-13-36.yaml
Tools/parametric_model/src/optimizers/: __init__.py  linear_regressor.py  optimizer_base_template.py  qp_optimizer.py
Tools/parametric_model/src/tools/: __init__.py  automatic_data_selector.py  data_handler.py  data_tools.py  dataframe_tools.py  flight_time_selector.py  math_tools.py  quat_utils.py  runge_kutta.py  string_to_bool.py  ulog_tools.py  ulog_utils.py
Tools/parametric_model/tests/: test_dynamics_model.py  test_rotor_model.py  test_tilt_wing_section.py  test_tilting_rotor.py
doc/: fixed_wing_model.md
docker/: Dockerfile
include/: aero_parameters.h  data_driven_dynamics_plugin.h  gazebo_aerodynamics_plugin.h  gazebo_fw_dynamics_plugin.h  parametric_dynamics_model.h
model_results/: groundtruth.yaml
models/iris_aerodynamics/: iris_aerodynamics.sdf  model.config
models/standard_vtol_aerodynamics/: standard_vtol_aerodynamics.sdf
models/techpod_aerodynamics/: model.config  techpod_aerodynamics.sdf
resources/: README.md  elevator_ramp_zero_thrust.csv  fixedwing_model.csv  quadplane_model.csv  quadrotor_model.csv  quadrotor_model_trajectory.csv  simple_quadplane_model.csv  tiltwing_model.csv  tiltwing_model_small_dataset.csv
src/: data_driven_dynamics_plugin.cpp  gazebo_aerodynamics_plugin.cpp  gazebo_fw_dynamics_plugin.cpp  parametric_dynamics_model.cpp
unit_tests/: CMakeLists.txt  gazebo_aerodynamics_plugin_test.cpp
